--- a/publications.html
+++ b/publications.html
@@ -127,7 +127,7 @@
 
   <h2>2024</h2>
   <div class="publication">
-    <b>Erik F. Alvarez</b>, Juan Camilo López, Andrés Ramos, Luis Olmos. <em>An optimal expansion planning of power systems considering cycle-based AC optimal power flow</em>. Sustainable Energy, Grids and Networks, 2024.
+    <b>Erik F. Alvarez</b>, Juan Camilo López, Andrés Ramos, and Luis Olmos. <em>An optimal expansion planning of power systems considering cycle-based AC optimal power flow</em>. Sustainable Energy, Grids and Networks, 2024.
     <a href="https://doi.org/10.1016/j.segan.2024.101413" target="_blank">doi</a>
 
     <div class="buttons">
@@ -155,7 +155,7 @@
   </div>
 
   <div class="publication">
-    Dilayne Santos Oliveira, Sara Lumbreras, <b>Erik F. Alvarez</b>, Andrés Ramos, Luis Olmos. <em>Model-based energy planning: A methodology to choose and combine models to support policy decisions</em>. International Journal of Electrical Power & Energy Systems, 2024.
+    Dilayne Santos Oliveira, Sara Lumbreras, <b>Erik F. Alvarez</b>, Andrés Ramos, and Luis Olmos. <em>Model-based energy planning: A methodology to choose and combine models to support policy decisions</em>. International Journal of Electrical Power & Energy Systems, 2024.
     <a href="https://doi.org/10.1016/j.ijepes.2024.110048" target="_blank">doi</a>
 
     <div class="buttons">
@@ -183,7 +183,29 @@
   </div>
 
   <div class="publication">
-    E.F. Alvarez, P. Sánchez-Martín, A. Ramos. <em>Self-Scheduling for a Hydrogen-Based Virtual Power Plant in Day-Ahead Energy and Reserve Electricity Markets</em>. 20th International Conference on the European Energy Market (EEM), 2024.
+    <b>Erik F. Alvarez</b>, Pedro Sánchez-Martín, and Andrés Ramos. <em>Self-Scheduling for a Hydrogen-Based Virtual Power Plant in Day-Ahead Energy and Reserve Electricity Markets</em>.  2024 20th International Conference on the European Energy Market (EEM), Istanbul, Turkiye, 2024.
+        <div class="buttons">
+      <button onclick="toggle('abs3')">ABS</button>
+      <button onclick="toggle('bib3')">BIB</button>
+    </div>
+
+    <div class="abstract" id="abs3">
+        This study presents an innovative optimization model for the self-scheduling of a hydrogen-based virtual power plant (H2-VPP) that aims to thrive in day-ahead energy and reserve markets. At its core, the model seeks to optimize profits by integrating a mix of renewable sources, battery storage, electrolyzers, and hydrogen storage, highlighting the model's focus on both electricity and hydrogen networks within a unified operational framework. Designed to navigate the complexities of a VPP, the model excels at strategically managing diverse resources for energy and reserve markets, emphasizing optimal operation of all assets. It accounts for the interplay between electricity and hydrogen production, storage, and demand, and addresses the time constraints critical to increasing revenues and ensuring balanced supply. A case study demonstrates the model's effectiveness, highlighting the role of hydrogen storage in increasing renewable integration and revenues. This underscores the model's ability to leverage the unique dynamics of electricity and hydrogen within the H2-VPP, confirming its potential in a rapidly evolving energy landscape.
+    </div>
+
+    <div class="bibtex" id="bib3">
+      @INPROCEEDINGS{10608848,<br>
+        author={Alvarez, Erik F. and Sánchez-Martín, Pedro and Ramos, Andrés},<br>
+        booktitle={2024 20th International Conference on the European Energy Market (EEM)},<br>
+        title={Self-Scheduling for a Hydrogen-Based Virtual Power Plant in Day-Ahead Energy and Reserve Electricity Markets},<br>
+        year={2024},<br>
+        volume={},<br>
+        number={},<br>
+        pages={1-6},<br>
+        keywords={Renewable energy sources;Hydrogen storage;Costs;Navigation;Electricity;Hydrogen;Production;Day-ahead;electricity market;hydrogen;secondary reserves;virtual power plant},<br>
+        doi={10.1109/EEM60825.2024.10608848}<br>
+      }
+    </div>
   </div>
 
   <h2>2022</h2>
