--- a/publications.html
+++ b/publications.html
@@ -128,7 +128,7 @@
   <h2>2024</h2>
   <div class="publication">
     <b>Erik F. Alvarez</b>, Juan Camilo López, Andrés Ramos, and Luis Olmos. <em>An optimal expansion planning of power systems considering cycle-based AC optimal power flow</em>. Sustainable Energy, Grids and Networks, 2024.
-    <a href="https://doi.org/10.1016/j.segan.2024.101413" target="_blank">doi</a>
+    <a href="https://doi.org/10.1016/j.segan.2024.101413" target="_blank">DOI</a>.
 
     <div class="buttons">
       <button onclick="toggle('abs1')">ABS</button>
@@ -156,7 +156,7 @@
 
   <div class="publication">
     Dilayne Santos Oliveira, Sara Lumbreras, <b>Erik F. Alvarez</b>, Andrés Ramos, and Luis Olmos. <em>Model-based energy planning: A methodology to choose and combine models to support policy decisions</em>. International Journal of Electrical Power & Energy Systems, 2024.
-    <a href="https://doi.org/10.1016/j.ijepes.2024.110048" target="_blank">doi</a>
+    <a href="https://doi.org/10.1016/j.ijepes.2024.110048" target="_blank">DOI</a>
 
     <div class="buttons">
       <button onclick="toggle('abs2')">ABS</button>
@@ -165,6 +165,7 @@
 
     <div class="abstract" id="abs2">
       Long-term energy planning increasingly relies on mathematical models offering quantitative insight to support complex policy decisions. However, the increase in their use has meant the proliferation of tools developed at different institutions, with various scopes, dealing with specific aspects of the economy, the power sector, or the climate, with mismatches in temporal or geographic resolution. All this creates a need for using several models concurrently, integrating them to generate a complete perspective on the implications of policy decisions on the energy transition. This article proposes a methodology to categorize and combine energy models and develop a manipulation strategy to answer a target research question. Thus, it gives a formal structure to tasks carried out informally −and suboptimally- in virtually any energy planning project. This methodology is based on structured modeling, a formal mathematical theory conceived for representing and manipulating models. It assumes a soft-linking approach, meaning the models share information without integrating them within the same platform or code. This framework was developed within the European project openENTRANCE, which will develop, use, and disseminate an open, transparent, and integrated modeling platform for assessing low-carbon transition pathways in Europe.
+      <a href="https://doi.org/10.1016/j.ijepes.2024.110048" target="_blank">DOI</a>.
     </div>
 
     <div class="bibtex" id="bib2">
@@ -184,7 +185,8 @@
 
   <div class="publication">
     <b>Erik F. Alvarez</b>, Pedro Sánchez-Martín, and Andrés Ramos. <em>Self-Scheduling for a Hydrogen-Based Virtual Power Plant in Day-Ahead Energy and Reserve Electricity Markets</em>.  2024 20th International Conference on the European Energy Market (EEM), Istanbul, Turkiye, 2024.
-        <div class="buttons">
+    <a href="10.1109/EEM60825.2024.10608848" target="_blank">DOI</a>.
+    <div class="buttons">
       <button onclick="toggle('abs3')">ABS</button>
       <button onclick="toggle('bib3')">BIB</button>
     </div>
@@ -210,7 +212,30 @@
 
   <h2>2022</h2>
   <div class="publication">
-    E.F. Alvarez, L. Olmos, A. Ramos, et al. <em>Values and impacts of incorporating local flexibility services in transmission expansion planning</em>. Electric Power Systems Research, 2022. <a href="https://doi.org/10.1016/j.epsr.2022.108480" target="_blank">doi:10.1016/j.epsr.2022.108480</a>
+    <b>Erik F. Alvarez</b>, Luis Olmos, Andrés Ramos, Kyriaki Antoniadou-Plytaria, David Steen and Le Anh Tuan <em>Values and impacts of incorporating local flexibility services in transmission expansion planning</em>. Electric Power Systems Research, 2022.
+    <a href="https://doi.org/10.1016/j.epsr.2022.108480" target="_blank">DOI</a>
+    <div class="buttons">
+      <button onclick="toggle('abs4')">ABS</button>
+      <button onclick="toggle('bib4')">BIB</button>
+    </div>
+
+    <div class="abstract" id="abs4">
+        This paper presents a cost-based TSO-DSO coordination model to quantify the value of local flexibility services and analyze its impact on the transmission grid expansion and the system operation. Flexibility is provided to the DC power flow transmission grid model by microgrids within the integrated AC power flow distribution grid model. The model’s objective is to minimize the overall cost of transmission investments and procured flexibility and is achieved using a bilevel optimization approach where the power exchanges on all connected grid interfaces are controlled. Case studies using a combined test system of the IEEE RTS-96 transmission network interfacing multiple 33-bus distribution grids were performed to validate the model and assess the values and impacts of local flexibility on the transmission system expansion. The results showed that the proposed model modified the investment plan and dispatch of flexibility resources reducing the investment and operation cost of the transmission system.
+    </div>
+
+    <div class="bibtex" id="bib4">
+      @article{ALVAREZ2022108480,<br>
+        title = {Values and impacts of incorporating local flexibility services in transmission expansion planning},<br>
+        journal = {Electric Power Systems Research},<br>
+        volume = {212},<br>
+        pages = {108480},<br>
+        year = {2022},<br>
+        issn = {0378-7796},<br>
+        doi = {https://doi.org/10.1016/j.epsr.2022.108480},<br>
+        url = {https://www.sciencedirect.com/science/article/pii/S0378779622005958},<br>
+        author = {Erik F. Alvarez and Luis Olmos and Andrés Ramos and Kyriaki Antoniadou-Plytaria and David Steen and Le Anh Tuan},<br>
+      }
+    </div>
   </div>
 
   <div class="publication">
