--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
 <!--    <li><strong>EnergyFlex-SE</strong> – Flexibility from distributed energy resources</li>-->
 <!--  </ul>-->
 
+  <h2>Selected Projects</h2>
+  <p>Coming soon...</p>
+
   <h2>Selected Publications</h2>
   <p>Coming soon...</p>
 </body>
