--- a/publications.html
+++ b/publications.html
@@ -126,6 +126,9 @@
   <h1>Publications</h1>
 
   <h2>2024</h2>
+  <hr style="width:50%;text-align:left;margin-left:0">
+
+
   <div class="publication">
     <b>Erik F. Alvarez</b>, Juan Camilo López, Andrés Ramos, and Luis Olmos. <em>An optimal expansion planning of power systems considering cycle-based AC optimal power flow</em>. Sustainable Energy, Grids and Networks, 2024.
     <a href="https://doi.org/10.1016/j.segan.2024.101413" target="_blank">DOI</a>.
@@ -211,6 +214,9 @@
   </div>
 
   <h2>2022</h2>
+  <hr style="width:50%;text-align:left;margin-left:0">
+
+
   <div class="publication">
     <b>Erik F. Alvarez</b>, Luis Olmos, Andrés Ramos, Kyriaki Antoniadou-Plytaria, David Steen and Le Anh Tuan <em>Values and impacts of incorporating local flexibility services in transmission expansion planning</em>. Electric Power Systems Research, 2022.
     <a href="https://doi.org/10.1016/j.epsr.2022.108480" target="_blank">DOI</a>
