--- a/publications.html
+++ b/publications.html
@@ -271,13 +271,40 @@
     </div>
   </div>
 
+  <div class="publication">
+    Andrés Ramos, <b>Erik F. Alvarez</b>, and Sara Lumbreras. <em>openTEPES: open-source transmission and generation expansion planning</em>. SoftwareX, 2022.
+    <a href="https://doi.org/10.1016/j.softx.2022.101070" target="_blank">DOI</a>
+    <div class="buttons">
+      <button onclick="toggle('abs6')">ABS</button>
+      <button onclick="toggle('bib5')">BIB</button>
+    </div>
+
+    <div class="abstract" id="abs6">
+        The expansion of the transmission network will be a key enabler of the energy transition. However, the high level of technical detail involved in network studies, where a DCPF and the consideration of discrete investment are necessary, meant that it was accessible only to very specialized researchers. OpenTEPES changes the picture by providing an open-access tool with full functionality. OpenTEPES determines the investment plans for new power facilities (generating units and lines) necessary to supply future demand at minimum cost. OpenTEPES represents hierarchically the different time scopes involved in the planning decisions, from the medium to the very long term. It includes the uncertainty related to system operation, such as the availability of renewable energy sources and electricity demand, and multiple criteria such as investment cost or carbon emissions. OpenTEPES is a flexible tool that has been applied to planning projects in a European context. It has been developed as part of the H2020 project OpenENTRANCE and is now available open-source for the energy planning community.
+    </div>
+
+    <div class="bibtex" id="bib6">
+      @article{RAMOS2022101070,<br>
+        title = {OpenTEPES: Open-source Transmission and Generation Expansion Planning},<br>
+        journal = {SoftwareX},<br>
+        volume = {18},<br>
+        pages = {101070},<br>
+        year = {2022},<br>
+        issn = {2352-7110},<br>
+        doi = {https://doi.org/10.1016/j.softx.2022.101070},<br>
+        url = {https://www.sciencedirect.com/science/article/pii/S235271102200053X},<br>
+        author = {Andrés Ramos and Erik F. Alvarez and Sara Lumbreras},<br>
+      }
+    </div>
   </div>
+
+<!--  </div>-->
 
   <!-- Add more years and publications similarly -->
 
 
 
-  <p style="margin-top: 3em;">For the full list of publications, see my <a href="https://scholar.google.com/citations?user=iextGGkAAAAJ&hl=en" target="_blank">Google Scholar</a>.</p>
+<!--  <p style="margin-top: 3em;">For the full list of publications, see my <a href="https://scholar.google.com/citations?user=iextGGkAAAAJ&hl=en" target="_blank">Google Scholar</a>.</p>-->
 
 </body>
 </html>
