--- a/publications.html
+++ b/publications.html
@@ -272,28 +272,29 @@
   </div>
 
   <div class="publication">
-    Andrés Ramos, <b>Erik F. Alvarez</b>, and Sara Lumbreras. <em>openTEPES: open-source transmission and generation expansion planning</em>. SoftwareX, 2022.
-    <a href="https://doi.org/10.1016/j.softx.2022.101070" target="_blank">DOI</a>
+    Sara Lumbreras, Jesús David Gómez, <b>Erik F. Alvarez</b>, and Sebastien Huclin. <em>The Human Factor in Transmission Network Expansion Planning: The Grid That a Sustainable Energy System Needs</em>. Sustainability, 2022.
+    <a href="https://www.mdpi.com/2071-1050/14/11/6746" target="_blank">DOI</a>
     <div class="buttons">
       <button onclick="toggle('abs6')">ABS</button>
       <button onclick="toggle('bib5')">BIB</button>
     </div>
 
     <div class="abstract" id="abs6">
-        The expansion of the transmission network will be a key enabler of the energy transition. However, the high level of technical detail involved in network studies, where a DCPF and the consideration of discrete investment are necessary, meant that it was accessible only to very specialized researchers. OpenTEPES changes the picture by providing an open-access tool with full functionality. OpenTEPES determines the investment plans for new power facilities (generating units and lines) necessary to supply future demand at minimum cost. OpenTEPES represents hierarchically the different time scopes involved in the planning decisions, from the medium to the very long term. It includes the uncertainty related to system operation, such as the availability of renewable energy sources and electricity demand, and multiple criteria such as investment cost or carbon emissions. OpenTEPES is a flexible tool that has been applied to planning projects in a European context. It has been developed as part of the H2020 project OpenENTRANCE and is now available open-source for the energy planning community.
+        The decarbonization of the energy sector puts additional pressure on the transmission network. The main cause for this is that renewable sources are often more abundant in geographical areas far away from the main demand centers, so new transmission lines are required to connect the new renewable energy capacity. In addition, by connecting different geographical zones, the transmission network could smooth the intermittency and the variability of renewable energy production. Thus, the changing energy landscape leads to a need to reinforce the transmission network through the Network Transmission Expansion Planning. Ideally, all the idiosyncrasies of the electricity system are considered in the operation and expansion planning process. However, several critical dimensions of the planning process are routinely ignored since they may introduce parameters that are difficult to quantify and complexity that state-of-the-art planning methods cannot handle. This paper identifies the most relevant elements related to the human factor, which have been grouped around the main topics: the human behind the technical, the human at the institutional level, and the human at the individual level. This paper also provides an additional formulation that can be used to upgrade existing models to include the human element and discusses the implications of these upgrades.
     </div>
 
     <div class="bibtex" id="bib6">
-      @article{RAMOS2022101070,<br>
-        title = {OpenTEPES: Open-source Transmission and Generation Expansion Planning},<br>
-        journal = {SoftwareX},<br>
-        volume = {18},<br>
-        pages = {101070},<br>
-        year = {2022},<br>
-        issn = {2352-7110},<br>
-        doi = {https://doi.org/10.1016/j.softx.2022.101070},<br>
-        url = {https://www.sciencedirect.com/science/article/pii/S235271102200053X},<br>
-        author = {Andrés Ramos and Erik F. Alvarez and Sara Lumbreras},<br>
+      @Article{su14116746,
+        AUTHOR = {Lumbreras, Sara and Gómez, Jesús David and Alvarez, Erik Francisco and Huclin, Sebastien},<br>
+        TITLE = {The Human Factor in Transmission Network Expansion Planning: The Grid That a Sustainable Energy System Needs},<br>
+        JOURNAL = {Sustainability},<br>
+        VOLUME = {14},<br>
+        YEAR = {2022},<br>
+        NUMBER = {11},<br>
+        ARTICLE-NUMBER = {6746},<br>
+        URL = {https://www.mdpi.com/2071-1050/14/11/6746},<br>
+        ISSN = {2071-1050},<br>
+        DOI = {10.3390/su14116746}<br>
       }
     </div>
   </div>
