--- a/publications.html
+++ b/publications.html
@@ -299,8 +299,11 @@
     </div>
   </div>
 
+  <h2>2021</h2>
+  <hr style="width:100%;text-align:left;margin-left:0">
+
   <div class="publication">
-    Daniel Huppmann, et al. <em>The Human Factor in Transmission Network Expansion Planning: The Grid That a Sustainable Energy System Needs</em>. Open Research Europe, 2021.
+    Daniel Huppmann, et al. <em>pyam: Analysis and visualisation of integrated assessment and macro-energy scenarios</em>. Open Research Europe, 2021.
     <a href="https://doi.org/10.12688/openreseurope.13633.2" target="_blank">DOI</a>
     <div class="buttons">
       <button onclick="toggle('abs7')">ABS</button>
@@ -319,6 +322,35 @@
         volume={1},<br>
         pages={74},<br>
         year={2021}<br>
+      }
+    </div>
+  </div>
+
+  <h2>2020</h2>
+  <hr style="width:100%;text-align:left;margin-left:0">
+
+  <div class="publication">
+    <b>Erik F. Alvarez</b>, Miguel Paredes, and Marcos J. Rider. <em>Semidefinite relaxation and generalised benders decomposition to solve the transmission expansion network and reactive power planning</em>. IET Generation, Transmission & Distribution, 2020.
+    <a href="https://doi.org/10.1049/iet-gtd.2019.0331" target="_blank">DOI</a>
+    <div class="buttons">
+      <button onclick="toggle('abs8')">ABS</button>
+      <button onclick="toggle('bib8')">BIB</button>
+    </div>
+
+    <div class="abstract" id="abs8">
+        This study presents a methodology to solve simultaneously the alternating current (AC) transmission network expansion and reactive power planning problems, considering multiple stages and operating conditions. A mixed-integer non-linear programming model for the proposed planning problem is presented and rewritten with semidefinite structures. Then, the generalised Benders decomposition is used to separate the overall problem into an upper-level (master) problem and several lower-level (slaves) problems. The master problem is a mixed-integer linear programming problem that optimises the investment cost and constraints of the multistage expansion. Each slave problem minimises the operating costs associated with each stage and operating condition (normal operation or contingency), considering the AC power flow via semidefinite relaxation. With the proposed methodology, the global optimality of generalised Benders decomposition can be preserved due to the use of semidefinite relaxation in each slave problem. Garver's 6-bus system and an IEEE 118-bus system are used to show the precision and convergence to near-global optimal solutions with small relaxation gaps through the proposed approach.
+    </div>
+
+    <div class="bibtex" id="bib8">
+      @article{Alvarez20190331,<br>
+        author = {Alvarez, Erik F. and Paredes, Miguel and Rider, Marcos J.},<br>
+        title = {Semidefinite relaxation and generalised benders decomposition to solve the transmission expansion network and reactive power planning},<br>
+        journal = {IET Generation, Transmission \& Distribution},<br>
+        volume = {14},<br>
+        number = {11},<br>
+        pages = {2160-2168},<br>
+        doi = {https://doi.org/10.1049/iet-gtd.2019.0331},<br>
+        year = {2020}<br>
       }
     </div>
   </div>
