--- a/publications.html
+++ b/publications.html
@@ -355,6 +355,30 @@
     </div>
   </div>
 
+  <h2>2019</h2>
+  <hr style="width:100%;text-align:left;margin-left:0">
+
+  <div class="publication">
+    <b>[Master Thesis] - Erik F. Alvarez</b>. <em>Semidefinite Relaxation for the Optimal Operation and Expansion Planning of Power Transmission Systems</em>. UNICAMP, 2019.
+    <a href="10.13140/RG.2.2.12881.28006" target="_blank">DOI</a>
+    <div class="buttons">
+      <button onclick="toggle('abs9')">ABS</button>
+      <button onclick="toggle('bib9')">BIB</button>
+    </div>
+
+    <div class="abstract" id="abs9">
+        This thesis aims to explore the potential of one of the most promising optimization techniques, known as semidefinite relaxation or SDP relaxation, to address optimization problems in power transmission systems. This is a relatively new technique of convex optimization that has been developing in the last decade. It have quickly taken the attention of diverse research groups because numerous nonlinear problems can be approached by SDP. The pursuit of this work is related to: 1) the exploration of the potentialities of SDP relaxation to provide tight relaxations in power system optimization problems that is one of the key points in this line of research; 2) to solve the expansion planning and operation problems of power systems using SDP relaxation without linearizations. Both of them are challenging combinatorial problems and continually become more complex due to the high penetration of renewable energy sources, deployment of distributed generation, storage units and the increasing share of stochastic loads. To detail, the first part presents theoretical aspects of convex relaxations, specifically focused on SDP based on optimal power flow (OPF). In particular, a comprehensive and unified framework of the different methods proposed in the literature to design the semidefinite relaxations is provided. The second part presents the application of SDP to the optimal expansion planning and operation of power systems. Where an introduction to expansion planning problems in power systems is provided, with a special emphasis on one of the most challenging problem, known as the Transmission Network Expansion Planning (TNEP) problem. This problem was selected both for being a hard-combinatorial problem and for including integer variables. In order to solve the TNEP, a methodology based on the generalized Bender’s decomposition (GBD) and SDP is presented. Finally, other challenging problem related to the power systems operation is provided. This problem is known in literature as the Stochastic Market Clearing (SMC) problem. During many years, the SMC was approached with linearizations and approximations, which are the reason why it was selected and show the possibility to use the SDP in order to have a better representation of the characteristics of the power systems operation. In these problems, the semidefinite relaxation was applied, and reinforced by addition of appropriate constraints because each problem has its own characteristic and needs that the semidefinite relaxation to be applied in a particular way.
+    </div>
+
+    <div class="bibtex" id="bib9">
+      @article{Alvarez2019semidefinite,<br>
+        title={Semidefinite Relaxation for the Optimal Operation and Expansion Planning of Power Transmission Systems},<br>
+        author={Erik F. Alvarez},<br>
+        year={2019}<br>
+      }
+    </div>
+  </div>
+
 <!--  </div>-->
 
   <!-- Add more years and publications similarly -->
