--- a/publications.html
+++ b/publications.html
@@ -379,6 +379,35 @@
     </div>
   </div>
 
+  <div class="publication">
+    <b>Erik F. Alvarez</b>, Juan Camilo López, Pedro P. Vergara, Jefferson J. Chavez and Marcos J. Rider. <em>A Stochastic Market-Clearing Model Using Semidefinite Relaxation</em>. 2019 IEEE Milan PowerTech, 2019.
+    <a href="10.1109/PTC.2019.8810418" target="_blank">DOI</a>
+    <div class="buttons">
+      <button onclick="toggle('abs10')">ABS</button>
+      <button onclick="toggle('bib10')">BIB</button>
+    </div>
+
+    <div class="abstract" id="abs10">
+        This paper proposes a two-stage stochastic market clearing (SMC) model based on a semidefinite programming (SDP) relaxation. The SMC model aims at determining the day-ahead schedule (DA) and the real-time (RT) balance settlement that minimize the total expected production cost. The network capacity constraints are considered in the proposed model through an AC power flow formulation, while the uncertainty in the renewable-based generation is taking into account using a set of stochastic scenarios. In order to solve the proposed non-linear programming model, a SDP relaxation is used. An illustrative example (3-bus test system) and the IEEE Reliability 24-bus test system are used to show the effectiveness and accuracy of the proposed model. Results shown that the proposed SDP relaxation introduce a negligible error, when compared with the solution after solving the original non-linear model.
+    </div>
+
+    <div class="bibtex" id="bib10">
+      @INPROCEEDINGS{8810418,<br>
+        author={Alvarez, Erik F. and López, Juan C. and Vergara, Pedro P. and Chavez, Jefferson J. and Rider, Marcos J.},<br>
+        booktitle={2019 IEEE Milan PowerTech},<br>
+        title={A Stochastic Market-Clearing Model Using Semidefinite Relaxation},<br>
+        year={2019},<br>
+        volume={},<br>
+        number={},<br>
+        pages={1-6},<br>
+        keywords={Reactive power;Wind power generation;Real-time systems;Generators;Light rail systems;Programming;Stochastic processes;Stochastic market-clearing;AC optimal power flow;semidefinite relaxation},<br>
+        doi={10.1109/PTC.2019.8810418}<br>
+      }
+    </div>
+  </div>
+
+
+
 <!--  </div>-->
 
   <!-- Add more years and publications similarly -->
