--- a/publications.html
+++ b/publications.html
@@ -284,7 +284,7 @@
     </div>
 
     <div class="bibtex" id="bib6">
-      @Article{su14116746,
+      @Article{su14116746,<br>
         AUTHOR = {Lumbreras, Sara and Gómez, Jesús David and Alvarez, Erik Francisco and Huclin, Sebastien},<br>
         TITLE = {The Human Factor in Transmission Network Expansion Planning: The Grid That a Sustainable Energy System Needs},<br>
         JOURNAL = {Sustainability},<br>
